# holly_willoughbot

./: .gitignore  Containerfile  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 1e3fff1d095b_initial_database.py  7fb17d8d81d9_add_datetime_to_comments_table.py  aa2ba21988cc_add_permalink_to_comments_table.py
holly_willoughbot/: __init__.py  api.py  bot.py  cli.py  database.py  piccolo_app.py  piccolo_conf.py  reddit.py  settings.py  table_config.py  tables.py  tasks.py  telegram.py
holly_willoughbot/jobs/: __init__.py  discovery.py  lock.py  notifications.py
holly_willoughbot/migrations/: holly_willoughbot_2025_01_17t12_32_40_819668.py  holly_willoughbot_2025_01_17t12_49_45_494289.py
holly_willoughbot/piccolo_migrations/: __init__.py  holly_willoughbot_2023_10_08t14_14_20_582907.py
scripts/: format  lint
