[tool.poetry]
name = "holly-willoughbot"
version = "0.0.0"
description = "Moderates various Subreddits"
authors = ["Chris Pressland <mail@cpressland.io>"]
readme = "README.md"

[tool.poetry.scripts]
holly = "holly_willoughbot.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.7.0"
click = "^8.1.3"
trogon = "^0.4.0"
pytelegrambotapi = "^4.12.0"
sqlalchemy = "^2.0.15"
psycopg = "^3.1.9"
alembic = "^1.11.1"
loguru = "^0.7.0"
pendulum = "^2.1.2"
apscheduler = "^3.10.1"
pydantic-settings = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"
black = "^23.1.0"
refurb = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["W605", "ANN101", "G004", "FBT003", "D407", "D203", "D213"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
