[tool.poetry]
name = "holly-willoughbot"
version = "0.0.0"
description = "Moderates various Subreddits"
authors = ["Chris Pressland <mail@cpressland.io>"]
readme = "README.md"

[tool.poetry.scripts]
holly = "holly_willoughbot.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
praw = "^7.7.1"
pydantic-settings = {extras = ["dotenv"], version = "^2.0.3"}
piccolo = {version = "1.0a2", extras = ["sqlite"]}
loguru = "^0.7.2"
pytelegrambotapi = "^4.14.0"
click = "^8.1.7"
pendulum = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["ANN101", "D203", "D213", "D407", "FBT001", "W605"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
