[project]
name = "holly-willoughbot"
version = "0.0.0"
description = "Moderates various Subreddits"
authors = [{ name = "Chris Pressland", email = "mail@cpressland.io" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "praw>=7.8.1",
    "loguru>=0.7.3",
    "piccolo[postgres]>=1.22.0",
    "pytelegrambotapi>=4.26.0",
    "typer>=0.15.1",
    "piccolo-admin>=1.9.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
]

[project.scripts]
holly = "holly_willoughbot:cli"

[dependency-groups]
dev = ["ruff>=0.5.7"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "D407", "FBT001", "FBT002", "W605", "COM812", "PLC0415", "TC002"]

[tool.ruff.lint.per-file-ignores]
"holly_willoughbot/migrations/**.py" = ["ALL"]
